[project]
name = "uv-toolbox"
description = "tool management with uv"
authors = [{ name = "hotdog-werx" }]
readme = "README.md"
license = 'MIT'
requires-python = ">=3.11"
version = "0.0.0.dev0"

dependencies = []

# [project.scripts]
# uv_toolbox = "uv_toolbox.cli.uv_toolbox:main"

[dependency-groups]
dev = ["pytest>=8.0.0", "pytest-mock>=3.12.0", "pytest-cov>=4.0.0"]

[tool]
pyright.extends = ".pkglink/.codeguide/configs/pyrightconfig.json"

[tool.releez]
create-pr = true
run-changelog-format = true
hooks = { changelog-format = [
  "mise",
  "exec",
  "--",
  "poe",
  "format-dprint",
  "{changelog}",
] }

[build-system]
requires = ["uv_build>=0.9.27,<0.10.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = ["uv_toolbox"]
module-root = ""
