[project]
name = "uv-toolbox"
description = "tool management with uv"
authors = [{ name = "hotdog-werx" }]
readme = "README.md"
license = 'MIT'
requires-python = ">=3.11"
version = "0.0.0.dev0"

dependencies = [
  "typer ==0.21.1",
  "pydantic >=2.7.0, <3",
  "pydantic-settings >=2.7.0, <3",
  'PyYAML >=6,<7',
]

[project.scripts]
uv-toolbox = "uv_toolbox.cli:main"

[dependency-groups]
dev = ["pytest>=8.0.0", "pytest-mock>=3.12.0", "pytest-cov>=4.0.0"]

[tool.ruff]
extend = "./.pkglink/.codeguide/configs/ruff.toml"

[tool.releez]
create-pr = true
run-changelog-format = true
hooks = { changelog-format = ["mise", "exec", "--", "poe", "format-dprint", "{changelog}"] }

[build-system]
requires = ["uv_build>=0.9.27,<0.10.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = ["uv_toolbox"]
module-root = ""
