[project]
name = "uv-toolbox"
description = "Manage Python tool environments with declarative configuration and content-addressed storage."
readme = "README.md"
requires-python = ">=3.11"
version = "0.0.0.dev0"
license = "MIT"
authors = [{ name = "James Trousdale" }]
keywords = [
  "uv",
  "virtual-environment",
  "venv",
  "tools",
  "python",
  "dependency-management",
  "cli",
  "content-addressed",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: System :: Systems Administration",
]

dependencies = [
  "typer ==0.21.1",
  "pydantic >=2.7.0, <3",
  "pydantic-settings >=2.7.0, <3",
  'PyYAML >=6,<7',
]

[project.urls]
Homepage = "https://github.com/hotdog-werx/uv-toolbox"
Repository = "https://github.com/hotdog-werx/uv-toolbox"
"Bug Tracker" = "https://github.com/hotdog-werx/uv-toolbox/issues"
Changelog = "https://github.com/hotdog-werx/uv-toolbox/blob/master/CHANGELOG.md"

[project.scripts]
uv-toolbox = "uv_toolbox.cli:main"
uvtb = "uv_toolbox.cli:main"

[dependency-groups]
dev = ["pytest>=8.0.0", "pytest-mock>=3.12.0", "pytest-cov>=4.0.0"]

[tool.ruff]
extend = "./.pkglink/.codeguide/configs/ruff.toml"

[tool.releez]
create-pr = true
run-changelog-format = true
hooks = { changelog-format = ["mise", "exec", "--", "poe", "format-dprint", "{changelog}"] }

[build-system]
requires = ["uv_build>=0.9.27,<0.10.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = ["uv_toolbox"]
module-root = ""
